tooling/nargo_cli/tests/snapshots/execution_success/nested_dyn_array_regression_5782/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: [Field; 2], v2: u32):
    v1 = allocate -> &mut [Field; 2]
    store v0 at v1
    (no terminator instruction)
}
